feat: Preparar projeto para deploy no Vercel
- Atualizar .gitignore com configurações completas
- Adicionar vercel.json para deploy fullstack
- Atualizar README.md com instruções completas
- Adicionar funcionalidade de geração de PDF
- Melhorar visual com efeitos glass e animações
- Implementar auto-save e componentes UI avançados
- Configurar estrutura para GitHub e Vercel

--- a/attached_assets/certofcado_rev_1749743717025.html
+++ b/attached_assets/certofcado_rev_1749743717025.html
@@ -485,5 +485,7 @@
         // Garante que a autenticação Firebase seja chamada assim que o DOM estiver pronto
         document.addEventListener('DOMContentLoaded', authenticateFirebase);
     </script>
+</head>
+<body>
 </body>
 </html>
