--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>Certificate Validator - Análise de Certificados</title>
+    <meta name="description" content="Sistema de validação e análise crítica de certificados de calibração conforme ISO/IEC 17025" />
+    <meta name="theme-color" content="#033985" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    
+    <!-- Bibliotecas para Geração de PDF -->
+    <!-- html2canvas para capturar o DOM como imagem -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <!-- jsPDF para criar o arquivo PDF a partir da imagem -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
